--- a/.env
+++ b/.env
@@ -21,7 +21,6 @@ NATS_SERVER=localhost:4222
 
 MONGODB_CONNECTION_STRING=mongodb://root:root@localhost:27017/?authSource=admin
 MONGODB_DATABASE=dbName
-MONGODB_COLLECTION=collectionName
 
 ################################################################################
 # QUEUING
@@ -39,4 +38,4 @@ MONGODB_COLLECTION=collectionName
 # You can add your own configuration settings here.
 ################################################################################
 
-MY_SETTING=foo
+# MY_SETTING=foo
