--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "notes",
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "node": "18.14.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "mongodb": "^5.0.0",
     "nats": "^2.13.1"
   }
